--- a/Frontends/UdemyCarBook.WebUI/Areas/Admin/Views/AdminDashboard/Index.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Areas/Admin/Views/AdminDashboard/Index.cshtml
@@ -129,156 +129,8 @@
 
             @await Component.InvokeAsync("_AdminDashboardCarPricingListComponentPartial")
              <!-- end col -->
-
-            <div class="col-xl-6">
-                <div class="card">
-                    <div class="card-body">
-
-                        <h4 class="card-title">Account Transactions</h4>
-                        <p class="card-subtitle mb-4 font-size-13">
-                            Transaction period from 21 July to 25 Aug
-                        </p>
-
-                        <div class="table-responsive">
-                            <table class="table table-borderless table-hover table-centered table-nowrap mb-0">
-                                <tbody>
-                                    <tr>
-                                        <td>
-                                            <h5 class="font-size-15 mb-1 font-weight-normal">
-                                                4257 **** ****
-                                                7852
-                                            </h5>
-                                            <span class="text-muted font-size-12">11 April 2019</span>
-                                        </td>
-                                        <td>
-                                            <h5 class="font-size-15 mb-1 font-weight-normal">$79.49</h5>
-                                            <span class="text-muted font-size-12">Amount</span>
-                                        </td>
-                                        <td>
-                                            <h5 class="font-size-17 mb-1 font-weight-normal">
-                                                <i class="fab fa-cc-visa"></i>
-                                            </h5>
-                                            <span class="text-muted font-size-12">Card</span>
-                                        </td>
-                                        <td>
-                                            <h5 class="font-size-15 mb-1 font-weight-normal">
-                                                Helen Warren
-                                            </h5>
-                                            <span class="text-muted font-size-12">Pay</span>
-                                        </td>
-                                    </tr>
-
-                                    <tr>
-                                        <td>
-                                            <h5 class="font-size-15 mb-1 font-weight-normal">
-                                                4265 **** ****
-                                                0025
-                                            </h5>
-                                            <span class="text-muted font-size-12">28 Jan 2019</span>
-                                        </td>
-                                        <td>
-                                            <h5 class="font-size-15 mb-1 font-weight-normal">$1254.00</h5>
-                                            <span class="text-muted font-size-12">Amount</span>
-                                        </td>
-                                        <td>
-                                            <h5 class="font-size-17 mb-1 font-weight-normal">
-                                                <i class="fab fa-cc-stripe"></i>
-                                            </h5>
-                                            <span class="text-muted font-size-12">Card</span>
-                                        </td>
-                                        <td>
-                                            <h5 class="font-size-15 mb-1 font-weight-normal">
-                                                Kayla Lambie
-                                            </h5>
-                                            <span class="text-muted font-size-12">Pay</span>
-                                        </td>
-                                    </tr>
-
-                                    <tr>
-                                        <td>
-                                            <h5 class="font-size-15 mb-1 font-weight-normal">
-                                                5570 **** ****
-                                                8547
-                                            </h5>
-                                            <span class="text-muted font-size-12">08 Dec 2018</span>
-                                        </td>
-                                        <td>
-                                            <h5 class="font-size-15 mb-1 font-weight-normal">$784.25</h5>
-                                            <span class="text-muted font-size-12">Amount</span>
-                                        </td>
-                                        <td>
-                                            <h5 class="font-size-17 mb-1 font-weight-normal">
-                                                <i class="fab fa-cc-amazon-pay"></i>
-                                            </h5>
-                                            <span class="text-muted font-size-12">Card</span>
-                                        </td>
-                                        <td>
-                                            <h5 class="font-size-15 mb-1 font-weight-normal">
-                                                Hugo Lavarack
-                                            </h5>
-                                            <span class="text-muted font-size-12">Pay</span>
-                                        </td>
-                                    </tr>
-
-                                    <tr>
-                                        <td>
-                                            <h5 class="font-size-15 mb-1 font-weight-normal">
-                                                7845 **** ****
-                                                5214
-                                            </h5>
-                                            <span class="text-muted font-size-12">03 Dec 2018</span>
-                                        </td>
-                                        <td>
-                                            <h5 class="font-size-15 mb-1 font-weight-normal">$485.24</h5>
-                                            <span class="text-muted font-size-12">Amount</span>
-                                        </td>
-                                        <td>
-                                            <h5 class="font-size-17 mb-1 font-weight-normal">
-                                                <i class="fab fa-cc-visa"></i>
-                                            </h5>
-                                            <span class="text-muted font-size-12">Card</span>
-                                        </td>
-                                        <td>
-                                            <h5 class="font-size-15 mb-1 font-weight-normal">
-                                                Amber Scurry
-                                            </h5>
-                                            <span class="text-muted font-size-12">Pay</span>
-                                        </td>
-                                    </tr>
-
-                                    <tr>
-                                        <td>
-                                            <h5 class="font-size-15 mb-1 font-weight-normal">
-                                                4257 **** ****
-                                                7852
-                                            </h5>
-                                            <span class="text-muted font-size-12">12 Nov 2018</span>
-                                        </td>
-                                        <td>
-                                            <h5 class="font-size-15 mb-1 font-weight-normal">$8964.04</h5>
-                                            <span class="text-muted font-size-12">Amount</span>
-                                        </td>
-                                        <td>
-                                            <h5 class="font-size-17 mb-1 font-weight-normal">
-                                                <i class="fab fa-cc-visa"></i>
-                                            </h5>
-                                            <span class="text-muted font-size-12">Card</span>
-                                        </td>
-                                        <td>
-                                            <h5 class="font-size-15 mb-1 font-weight-normal">
-                                                Caitlyn Gibney
-                                            </h5>
-                                            <span class="text-muted font-size-12">Pay</span>
-                                        </td>
-                                    </tr>
-
-                                </tbody>
-                            </table>
-                        </div>
-
-                    </div> <!-- end card-body-->
-                </div> <!-- end card-->
-            </div> <!-- end col -->
+            @await Component.InvokeAsync("_AdminDashboardBLogListComponentPartial")
+             <!-- end col -->
         </div>
 
     </div> <!-- container-fluid -->
