--- a/Frontends/UdemyCarBook.WebUI/Views/Car/Index.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Views/Car/Index.cshtml
@@ -20,7 +20,7 @@
                         </div>
                         <p class="d-flex mb-0 d-block">
                             <a href="/Reservation/Index/@item.CarPricingID" class="btn btn-primary py-2 mr-1">Hemen Kirala</a> 
-                            <a href="car-single.html" class="btn btn-secondary py-2 ml-1">Detaylar</a></p>
+                            <a href="/Car/CarDetail/@item.CarID" class="btn btn-secondary py-2 ml-1">Detaylar</a></p>
                     </div>
                 </div>
             </div>
